# YiriOneBot

./: .coveragerc  .flake8  .gitmoji-changelogrc  .pylintrc  CHANGELOG.md  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: pytest.yaml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  开发守则.md
examples/: bot.py  bus.ipynb  reverse_websocket_adapter.py  rwebsocket_adapter.ipynb  rwebsocket_adapter.py
mirai_onebot/: __init__.py  bot.py
mirai_onebot/adapters/: __init__.py  base.py  reverse_websocket_adapter.py
mirai_onebot/api/: __init__.py  api_provider.py
mirai_onebot/api/interfaces/: __init__.py  base.py  group.py  message.py  meta.py
mirai_onebot/event/: __init__.py  bus.py  event_base.py  group_event.py  private_direct_event.py
mirai_onebot/message/: __init__.py  message_chain.py  message_components.py
mirai_onebot/utils/: __init__.py
test/: __init__.py  test_event_bus.py  test_message.py  test_rwebsocket.py
tests/: test_eventbus.py  test_message.py
yiriob/: bot.py
yiriob/adapters/: __init__.py  base.py  reverse_websocket.py
yiriob/event/: __init__.py  base.py  bus.py  events.py  message_events.py  notice_events.py  request_event.py  request_events.py
yiriob/exceptions/: __init__.py  api.py
yiriob/interface/: __init__.py  base.py  message.py
yiriob/message/: __init__.py  message_chain.py  message_components.py
yiriob/utils/: __init__.py  logger.py
